--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -16,12 +16,12 @@
                 <a class="nav-link" href="{{url_for('main.profile',uname=current_user.author)}}">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{url_for('auth.logout')}}">Sign out</a>
+                <a class="nav-link" href="{{url_for('auth.logout')}}">Sign Out</a>
             </li>
             {% else %}
             <li class="nav-item">
 
-                <a class="nav-link" href="{{url_for('auth.login')}}">Sign in</a>
+                <a class="nav-link" href="{{url_for('auth.login')}}">Sign In</a>
 
 
             </li>
